Stabilize MultiSourceRootProviderTest
make sure all tasks are done before running classpath queries during
test mode.